<?xml version="1.0"?>
<package format="3">
  <name>lynxmotion-lss</name>
  <version>0.9.0</version>
  <description>
      Asynchronous control of Lynxmotion LSS smart servos.
  </description>

  <maintainer email="colin@flyingeinstein.com">Colin MacKenzie</maintainer>

  <license>MIT</license>

  <url type="website">http://lynxmotion.com/</url>
  <url type="repository">https://github.com/Lynxmotion/AlternativeLSS</url>
  <url type="bugtracker">https://github.com/Lynxmotion/AlternativeLSS/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>
